[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-reliability-index"
version = "0.1.0"
description = "Data Reliability Index - native validation and filtering of datasets."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20"
]

[project.optional-dependencies]
test = ["pytest"]
