[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-reliability-index"
version = "0.4.0"
description = "SDK for scoring, tiering, and filtering data reliability evidence."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    { name = "h3pdesign" }
]
keywords = ["data-quality", "data-reliability", "validation", "pydantic", "sdk", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0"
]

[project.optional-dependencies]
build = ["build", "twine"]
docs = ["black", "mkdocs-material", "mkdocstrings[python]"]
pandas = ["pandas>=2.0"]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
postgres = ["psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1"]
duckdb = ["duckdb>=1.0"]
mongo = ["pymongo>=4.0"]
polars = ["polars>=1.0"]
arrow = ["pyarrow>=15.0"]
test = ["pytest", "pandas>=2.0"]
all = [
    "pandas>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "psycopg[binary]>=3.1",
    "pymysql>=1.1",
    "duckdb>=1.0",
    "pymongo>=4.0",
    "polars>=1.0",
    "pyarrow>=15.0",
]

[project.urls]
Homepage = "https://github.com/h3pdesign/data-reliability-index"
Documentation = "https://h3pdesign.github.io/data-reliability-index/"
Repository = "https://github.com/h3pdesign/data-reliability-index"
Issues = "https://github.com/h3pdesign/data-reliability-index/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
data_reliability = ["py.typed"]
